<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_back"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_app_logo" />


        <TextView android:fontFamily="@font/opensans_regular"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/txt_verification_message"
            android:textColor="@color/colorAccent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:gravity="bottom"
            android:minHeight="52dp"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText android:fontFamily="@font/opensans_regular"
                android:id="@+id/et_userMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bottom_line"
                android:digits="@string/numberic"
                android:hint="Registered Mobile Number"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:minHeight="40dp"
                android:singleLine="true"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:gravity="bottom"
            android:minHeight="52dp"
            android:visibility="visible"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText android:fontFamily="@font/opensans_regular"
                android:id="@+id/et_userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bottom_line"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="40dp"
                android:singleLine="true"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/txt_loginForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/opensans_regular"
            android:gravity="right|center_vertical|end"
            android:text="@string/txt_loginForgetpassword"
            android:textColor="@color/app_color_green_one"
            android:textSize="14sp"
            android:visibility="visible" />

        <Button android:fontFamily="@font/opensans_regular"
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_rectangle_green"
            android:focusableInTouchMode="false"
            android:text="@string/txt_submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#cccccc" />

            <TextView android:fontFamily="@font/opensans_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="45dp"
                android:text="OR"
                android:textAllCaps="true"
                android:textColor="@color/app_color_green_one"
                android:textSize="16sp" />

            <View
                android:layout_width="40dp"

                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#cccccc" />

        </LinearLayout>

        <Button android:fontFamily="@font/opensans_regular"
            android:id="@+id/btn_loginJoinNow"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/round_rectangle_orange"
            android:focusableInTouchMode="false"
            android:text="@string/txt_joinNow"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>