<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ChangePassword_Activity">

    <include
        layout="@layout/toolbar_without_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_margin="10dp"
            android:background="@android:color/white"
            android:fontFamily="@font/opensans_regular"
            android:singleLine="true"
            android:text="Change Password"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:ignore="Deprecated,HardcodedText" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/old_password"
                android:textColor="@color/companyDark"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_oldLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/line1"
                android:background="@drawable/bg_bottom_dop_shadow_editext_color"
                android:fontFamily="@font/opensans_regular"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/new_password"
                android:textColor="@color/companyDark"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_newLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/line1"
                android:background="@drawable/bg_bottom_dop_shadow_editext_color"
                android:fontFamily="@font/opensans_regular"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/confirm_password"
                android:textColor="@color/companyDark"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_confirmLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/line1"
                android:background="@drawable/bg_bottom_dop_shadow_editext_color"
                android:fontFamily="@font/opensans_regular"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="15dp" />


            <Button
                android:id="@+id/btn_updateChange"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/round_rectangle_main"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/opensans_regular"
                android:text="Change Password"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>