<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ForgotPassword_Activity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/app_color_white">

        <LinearLayout
            android:id="@+id/lin_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back_" />
        </LinearLayout>

        <ImageView
            android:id="@+id/test"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_app_logo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#f4f4f4" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"
        android:fontFamily="@font/opensans_regular"
        android:singleLine="true"
        android:text="Forgot Password"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        tools:ignore="Deprecated,HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:elevation="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/india"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:padding="3dp"
                        android:src="@drawable/ic_phone"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/country"
                        android:layout_width="1dp"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/india"
                        android:background="#e4e4e4" />

                    <TextView
                        android:id="@+id/line"
                        android:layout_width="1dp"
                        android:layout_height="35dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/country" />

                    <EditText
                        android:id="@+id/et_userMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/line"
                        android:background="@null"
                        android:digits="@string/numberic"
                        android:fontFamily="@font/opensans_regular"
                        android:hint="@string/mobile"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:minHeight="50dp"
                        android:singleLine="true"
                        android:textSize="13sp"
                        tools:ignore="Deprecated" />
                    <!-- </com.google.android.material.textfield.TextInputLayout>-->

                </RelativeLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <Button
                android:id="@+id/btn_resetPassword"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/round_rectangle_main"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/opensans_regular"
                android:text="Submit"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/opensans_regular"
            android:text="Note :"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/txt_note"
            android:textColor="@color/color_text_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/opensans_regular"
            android:text="Click here to login"
            android:textColor="@color/color__bg_orange"
            android:textSize="18sp"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>